# openai-unofficial-wasm

./: .gitignore  Cargo.toml  README.md  build.sh  openai_unofficial_wasm.wasm
src/: lib.rs
wasm-output/: openai_unofficial_wasm.wasm
wit/: core.wit  lifecycle.wit  provider.wit  world.wit
