[package]
name = "openai-unofficial-wasm"
version = "0.1.0"
edition = "2021"
description = "OpenAI provider extension for ABK agents - OpenAI-compatible API with streaming support"
license = "MIT OR Apache-2.0"
authors = ["Podtan Team"]
repository = "https://github.com/podtan/openai-unofficial-wasm"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.39.0"
wit-bindgen-rt = "0.39.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
